[package]
name = "inky-frame-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Darrik Moberg <30670444+mdarrik@users.noreply.github.com>"]
keywords = ["no-std", "e-ink", "embedded-graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = {version = "0.3", optional = true}
embedded-graphics = { version = "0.8.1", optional = true, features = ["defmt"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }

[features]
display = ["dep:embedded-graphics"]
defmt = ["dep:defmt"]
default = ["display"]
